--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -6,33 +6,37 @@
     android:layout_height="match_parent"
     android:background="@color/app_background">
 
-    <!-- Subtle glass overlay -->
+    <!-- Glass overlay -->
     <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#08000000"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#08000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Top Left Shape (peek style) -->
+    <!-- Top shape -->
     <ImageView
         android:id="@+id/shape_top"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:src="@drawable/top_left"
         android:scaleType="fitXY"
-        android:translationX="-60dp"
-        android:translationY="-40dp"
+        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintHeight_percent="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <!-- Bottom Right Shape (peek style) -->
+    <!-- Bottom shape -->
     <ImageView
         android:id="@+id/shape_bottom"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:src="@drawable/bottom_right"
         android:scaleType="fitXY"
-        android:translationX="60dp"
-        android:translationY="40dp"
+        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintHeight_percent="0.25"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -42,24 +46,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BASITSHOP."
-        android:textSize="42sp"
-        android:letterSpacing="0.22"
+        android:textSize="40sp"
         android:textColor="@color/brand_text"
-        android:fontFamily="@font/space_grotesk_semibold"
+        android:letterSpacing="0.2"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.42"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Swipe to Get Started -->
+    <!-- Swipe container -->
     <FrameLayout
         android:id="@+id/swipe_container"
-        android:layout_width="300dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/bg_glass_pill"
-        android:elevation="16dp"
+        android:elevation="12dp"
+        app:layout_constraintWidth_percent="0.8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -69,20 +72,19 @@
             android:layout_height="wrap_content"
             android:text="Swipe to Get Started"
             android:textColor="@color/brand_text"
-            android:textStyle="bold"
             android:layout_gravity="center"/>
 
         <FrameLayout
             android:id="@+id/swipe_thumb"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
             android:layout_margin="4dp"
             android:background="@drawable/bg_glass_circle"
-            android:elevation="20dp">
+            android:layout_gravity="start|center_vertical">
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_arrow_right"
                 android:tint="@color/orange"/>
