--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,76 +4,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@color/colorBackground">
+    android:background="@color/app_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
+        <!-- Glass card -->
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="LOGIN TO\nYOUR ACCOUNT"
-            android:textSize="28sp"
-            android:textColor="@color/colorText"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginTop="60dp"
+            android:orientation="vertical"
+            android:padding="24dp"
+            android:background="@drawable/bg_glass_card"
+            app:layout_constraintWidth_percent="0.9"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <EditText
-            android:id="@+id/et_email"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:background="@drawable/bg_input_glass"
-            android:hint="Email"
-            android:textColor="@color/colorText"
-            android:textColorHint="#808080"
-            android:paddingStart="16dp"
-            android:inputType="textEmailAddress"
-            android:layout_marginTop="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LOGIN"
+                android:textSize="28sp"
+                android:textColor="@color/brand_text"
+                android:textStyle="bold"/>
 
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:background="@drawable/bg_input_glass"
-            android:hint="Password"
-            android:textColor="@color/colorText"
-            android:textColorHint="#808080"
-            android:paddingStart="16dp"
-            android:inputType="textPassword"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_email"/>
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/bg_input_glass"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/brand_text"/>
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="LOGIN"
-            android:background="@drawable/bg_button_orange"
-            app:backgroundTint="@null" 
-            android:textColor="#FFFFFF"
-            android:layout_marginTop="30dp"
-            android:paddingVertical="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_password"/>
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input_glass"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColor="@color/brand_text"/>
 
-        <TextView
-            android:id="@+id/tv_register_toggle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Don't have an account? Sign Up"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="LOGIN"
+                android:textColor="@color/white"
+                android:background="@drawable/bg_button_orange"/>
+
+            <TextView
+                android:id="@+id/tv_register_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Don't have an account? Sign Up"
+                android:textColor="@color/orange"/>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
-
