--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,9 @@
         android:layout_height="wrap_content"
         android:padding="24dp">
 
-        <!-- Glass card -->
+        <!-- Glass Card -->
         <LinearLayout
+            android:id="@+id/login_card"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -24,15 +25,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
+            <!-- Title -->
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_login_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="LOGIN"
                 android:textSize="28sp"
+                android:textStyle="bold"
                 android:textColor="@color/brand_text"
-                android:textStyle="bold"/>
+                android:fontFamily="@font/space_grotesk_semibold"/>
 
+            <!-- Email -->
             <EditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
@@ -41,8 +45,10 @@
                 android:background="@drawable/bg_input_glass"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/brand_text"/>
+                android:textColor="@color/brand_text"
+                android:textColorHint="#80FFFFFF"/>
 
+            <!-- Password -->
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
@@ -51,8 +57,10 @@
                 android:background="@drawable/bg_input_glass"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:textColor="@color/brand_text"/>
+                android:textColor="@color/brand_text"
+                android:textColorHint="#80FFFFFF"/>
 
+            <!-- Login Button -->
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
@@ -60,8 +68,10 @@
                 android:layout_marginTop="24dp"
                 android:text="LOGIN"
                 android:textColor="@color/white"
-                android:background="@drawable/bg_button_orange"/>
+                android:background="@drawable/bg_button_orange"
+                app:backgroundTint="@null"/>
 
+            <!-- Register toggle -->
             <TextView
                 android:id="@+id/tv_register_toggle"
                 android:layout_width="wrap_content"
